<resources>
    <string name="app_name">Tiny Trailers Utility</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="preference_screen_one_key">com.example.android.tinytrailersutility.PREFERENCE_SCREEN_ONE_KEY</string>
    <string name="preference_screen_two_key">com.example.android.tinytrailersutility.PREFERENCE_SCREEN_TWO_KEY</string>

    <string name="action_settings">Settings</string>

    <!--MainActivity-->
    <string name="label_movie_playing">Showing for:</string>
    <string name="label_tickets_sold">Tickets sold:</string>

    <!--AddMovieActivity-->
    <string name="text_enter_link">Paste YouTube link</string>
    <string name="text_enter_rental">Select Rental Period:</string>
    <string name="btn_book_text">Select Video</string>
    <string-array name="rental_length_array">
        <item>10 mins</item>
        <item>15 mins</item>
        <item>25 mins</item>
    </string-array>
    <string name="spinner_prompt">select length</string>

    <!--Tiny Movie item-->
    <string name="label_youtube_id">Title:</string>
    <string name="label_rental_length">Rental period:</string>
    <string name="label_start_time">Start time:</string>
    <string name="label_time_elapsed">Time elapsed:</string>
    <string name="label_minutes">mins</string>
    <string name="label_hours">mins</string>
    <string name="label_starting_views">Starting views:</string>
    <string name="label_current_views">Current views:</string>
    <string name="label_views_claimed">Tickets sold:</string>

    <!--Screen One Fragment-->
    <string name="empty_view_text">Select a new movie</string>
    <string name="btn_complete_one">Complete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
