<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="-9dp"
    android:background="@android:color/background_light"
    tools:context="com.example.android.tinytrailersutility.ScreenOneFragment">

    <Button
        android:id="@+id/btn_complete_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:text="@string/btn_complete_one" />

    <TextView
        android:id="@+id/m1_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:gravity="center"
        android:text="@string/empty_view_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/frag_m1_movie_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_minutes"
        app:layout_constraintLeft_toRightOf="@+id/tv_time_left_m1"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_name_m1" />

    <TextView
        android:id="@+id/tv_tickets_sold_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_time_left_m1"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_left_m1"
        tools:text="452" />

    <TextView
        android:id="@+id/tv_time_left_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/label_time_left_m1"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_name_m1"
        tools:text="4:58" />

    <TextView
        android:id="@+id/label_tickets_sold_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_tickets_sold"
        app:layout_constraintLeft_toLeftOf="@+id/label_time_left_m1"
        app:layout_constraintTop_toBottomOf="@+id/label_time_left_m1"
        tools:text="Tickets sold:" />

    <TextView
        android:id="@+id/label_time_left_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_movie_playing"
        app:layout_constraintLeft_toLeftOf="@+id/tv_movie_name_m1"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_name_m1" />

    <TextView
        android:id="@+id/tv_movie_name_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Movie Name 2017" />
</android.support.constraint.ConstraintLayout>
</RelativeLayout>
