<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tinytrailersutility.AddMovieActivity">

    <EditText
        android:id="@+id/youtubeLinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_enter_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_enter_rental"
        app:layout_constraintLeft_toLeftOf="@+id/youtubeLinkEditText"
        app:layout_constraintTop_toBottomOf="@+id/youtubeLinkEditText" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/btn_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_book_text"
        app:layout_constraintRight_toRightOf="@+id/youtubeLinkEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>
